# ph_sys

./: .gitignore
docker/: Dockerfile  build_image.sh
install/: local_setup.sh  setup.sh
install/brain/share/brain/: package.dsv  package.ps1  package.sh  package.xml
install/first_package/lib/first_package/: first_package_node
log/: latest_build
logs/: ph_ec_log.csv
service_calls/: control_relay.sh  peristaltic_pump.sh
src/brain/: package.xml  setup.py
src/brain/launch/: sys.launch.py
src/daily_scheduler/: package.xml  setup.cfg  setup.py
src/daily_scheduler/daily_scheduler/: daily_scheduler_node.py
src/ec_controller/: package.xml  setup.cfg  setup.py
src/ec_controller/ec_controller/: controller_ec.py  ec_controller_node.py
src/ec_sensor/: package.xml  setup.cfg  setup.py
src/ec_sensor/ec_sensor/: ec_sensor_node.py  ezo_ec_sensor.py
src/first_package/: setup.py
src/first_package/first_package/: first_package_node.py
src/hardware/: setup.py
src/hardware/hardware/: config.py
src/interfaces/: CMakeLists.txt
src/interfaces/action/: IrrigationAction.action
src/interfaces/msg/: ActuatorStatusRWC.msg  AddressPort.msg  AirAgentStatus.msg  AirSensorMessage.msg  AirStatus.msg  CameraInstruction.msg  CameraStatus.msg  ControllerMessage.msg  ConveyorInstruction.msg  ConveyorMessage.msg  DailySchedulerMessage.msg  FlowMeterMessage.msg  Instruction.msg  IrrigationMessage.msg  IrrigationStatus.msg  LiftInstruction.msg  LiftStatus.msg  LightInstruction.msg  LightStatus.msg  PeristalticPumpMessage.msg  PhControllerMessage.msg  PhControllerPumpCommand.msg  PotentiometerMessage.msg  TankAgentStatus
src/interfaces/srv/: AirSensorSvc.srv  ConveyorService.srv  ECControllerService.srv  ExpanderService.srv  FlowMeterService.srv  I2cExpanderService.srv  IrrigationCircuitPressure.srv  IrrigationPumpsService.srv  LiftService.srv  PeristalticPumpService.srv  PhControllerService.srv  SendPumpStatus.srv  SensorServiceFloat32.srv  ValveStatus.srv  WaterLevelDetectorService.srv
src/irrigation_pumps/: package.xml  setup.cfg  setup.py
src/irrigation_pumps/irrigation_pumps/: irrigation_pumps_node.py  relay_board.py
src/peristaltic_pump/: package.xml  setup.cfg  setup.py
src/peristaltic_pump/peristaltic_pump/: peristaltic_pump_node.py
src/ph_controller/: setup.cfg  setup.py
src/ph_controller/ph_controller/: controller_ph.py  ph_controller_node.py
src/ph_sensor/: setup.cfg  setup.py
src/ph_sensor/ph_sensor/: ph_sensor_node.py
src/utils/: package.xml  setup.py
src/utils/utils/: log.py
tools/: build_clean.sh  exec_docker.sh  start_docker.sh
(+933 files in other folders)
